--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,12 @@
+spring:
+  application:
+    name: config-dev
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
+  instance:
+    prefer-ip-address: true
